Removed padding from social links to prevent clipping on hover of span in h1

--- a/css/style.scss
+++ b/css/style.scss
@@ -143,6 +143,7 @@ section p:last-of-type {
 	margin: 0;
 	position: absolute;
 	right: 0;
+	padding-left: 0;
 }
 
 .nav-bar {
